# marco

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.config
marco/: cli.py  main.py  requirements.txt
marco/analysis/: clusters.py
marco/core/: binja_discovery.py  config.py  helpers.py  models.py  rpc_models.py  rpc_registry.py
marco/data/: __init__.py  known_rpc_interfaces.json
marco/disassemblers/: __init__.py  binaryninja_adapter.py
marco/extractors/: __init__.py  calls.py  rpc_client.py  rpc_server.py  secure_call.py  syscall.py
marco/io/: jsonl_writer.py  manifest.py  neo4j_loader.py
marco/pipeline/: dependency_tracker.py  orchestrator.py  processor.py
marco/utils/: __init__.py  binary_analysis.py  demangler.py
marco/web/: __init__.py  observer.py  routes.py  server.py  state.py  websocket.py
marco/web/static/: index.html
marco/web/static/css/: marco.css
marco/web/static/js/: analysis.js  app.js  clusters.js  exploration.js  graph.js  query.js  sparkline.js  table.js
tests/: conftest.py  test_apiset.py  test_config.py  test_helpers.py  test_jsonl_writer.py  test_manifest.py  test_rpc_models.py  test_rpc_registry.py  test_web_routes.py  test_web_state.py
