[project]
name = "marco"
version = "0.1.0"
description = "Multi-binary control flow graphing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0.0",
    "pefile>=2023.0.0",
    "pyjectify>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "igraph>=0.11",
    "anthropic>=0.40.0",
]

[project.scripts]
marco = "marco.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.13.3",
    "ty>=0.0.18",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[tool.ty.rules]
# binaryninja is installed externally (commercial SDK), not in the venv
unresolved-import = "warn"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (let formatter handle)
    "PTH123", # use Path.open() - not always better
    "PTH118", # use Path.joinpath() - os.path.join is fine
    "PTH119", # use Path.resolve() - os.path is fine
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
